--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Project1",
-    "slug": "Project1",
+    "name": "NFT",
+    "slug": "NFT",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
